# lotery

./: dados_mega_sena.parquet  pyproject.toml
crawler/: resultados.py
