[tool.poetry]
name = "bi-mega-sena"
version = "0.1.0"
description = ""
authors = ["joaopedro02 <joao-pedro-02@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
polars = "^0.20.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
